[gd_scene load_steps=5 format=3 uid="uid://byxlewylgs56q"]

[ext_resource type="Script" path="res://util/typing_text.gd" id="1_gsi8k"]
[ext_resource type="LabelSettings" uid="uid://bf8m6t4hiop7d" path="res://assets/fonts/default_label_settings.tres" id="2_eq0yq"]
[ext_resource type="AudioStream" uid="uid://13j0rtskghy1" path="res://assets/music/sfx/typing sounds/TypewriterClick.wav" id="3_xgg84"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gfp7q"]
playback_mode = 1
random_pitch = 3.0
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("3_xgg84")
stream_0/weight = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 63.0
offset_bottom = 64.0
label_settings = ExtResource("2_eq0yq")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("1_gsi8k")
type_this = Array[String](["Welcome.", "You have awoken into a world of greenery.", "Where animals and plants are meant to flourish.", "But disaster has struck", "...", "Greenhouse Ghosts, Ozone Apparitions, and Methane Monsters are taking over!", "YOU MUST DEFEND THE MEADOW!", "DO NOT LET THE EARTH PERISH", "here is another option for intro:", "In a world that has crumbled from humanity's abuse.", "You, the enviroment must reclaim it from the dredges of pollution.", "DEFEAT THE GASEOUS GHOSTS!", "DO NOT LET THE EARTH PERISH!", "DEFEND THE MEADOW!"])

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Label"]
stream = SubResource("AudioStreamRandomizer_gfp7q")

[node name="TypeSpeed" type="Timer" parent="."]
wait_time = 0.125
one_shot = true
autostart = true

[node name="TimeBetweenPrompt" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="TypeSpeed" to="." method="_on_type_speed_timeout"]
[connection signal="timeout" from="TypeSpeed" to="Label" method="_on_type_speed_timeout"]
[connection signal="timeout" from="TimeBetweenPrompt" to="Label" method="_on_time_between_prompt_timeout"]
